@@ -9,8 +9,19 @@ pipeline {
 
     stage('Gradle Build') {
       steps {
+        script {
+          def initScript = """
+          allprojects {
+            repositories {
+              maven { url 'https://maven.aliyun.com/repository/public' }
+              maven { url 'https://maven.aliyun.com/repository/google' }
+            }
+          }
+          """
+          writeFile file: 'init.gradle', text: initScript
+        }
         withGradle() {
-          sh './gradlew clean build --add-opens java.base/java.lang=ALL-UNNAMED'
+          sh './gradlew clean build --init-script init.gradle'
         }
 
       }
